<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.christophers.soundgeneration.MainActivity">

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarX"
        android:max="255"
        android:progress="127"
        android:layout_below="@+id/textViewStereo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/connect_bow_ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBluetooth"
        android:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/disconnect_Bow_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCloseBluetooth"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarStereoTrimming"
        android:max="200"
        android:progress="100"
        android:layout_below="@+id/textViewStereoBalance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarBaseFreq"
        android:max="200"
        android:progress="100"
        android:layout_below="@+id/textViewVolume"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/base_tonHeight_Seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewVolume"
        android:layout_below="@+id/seekBarStereoTrimming"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonBluetooth"
        android:id="@+id/tableLayout"
        android:layout_below="@+id/seekBarY"
        android:elevation="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:text="@string/y_achsis_Bow_Simulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFrequenzy"
        android:layout_below="@+id/seekBarX"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarY"
        android:max="255"
        android:progress="0"
        android:layout_below="@+id/textViewFrequenzy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/x_achsis_Bow_Simulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStereo"
        android:layout_below="@+id/textViewAxisEmulator"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStereoBalance"
        android:layout_below="@+id/textViewProfileSettings"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="@string/bullseye_mode_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchBullsyeye"
        android:layout_below="@+id/seekBarBaseFreq"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:typeface="normal"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorTertiary" />

    <TextView
        android:text="Größe der Mitte:    3,5%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBullseyeSize"
        android:layout_below="@+id/switchBullsyeye"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarBullseye"
        android:progress="4"
        android:max="42"
        android:layout_below="@+id/textViewBullseyeSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/profile_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewProfileSettings"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/bow_simulate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAxisEmulator"
        android:layout_below="@+id/seekBarBullseye"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBarY"
        android:id="@+id/cardViewTest" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBluetooth"
        android:layout_alignParentStart="true"
        android:id="@+id/progressBar_Signal"
        android:layout_alignParentEnd="true"
        android:max="7"
        android:progress="0"
        />

</RelativeLayout>
